# graph_query_sampler

./: .gitignore  README.md  setup.cfg  setup.py
.github/workflows/: master.yaml  pull_request.yaml
executables/: main.py
resources/: README.md  config_example.json  harrypotter.nt
resources/formulas_example/1hop-2i/0qual/: test.sparql  train.sparql  validation.sparql
resources/formulas_example/1hop-2i/1qual-per-triple/: test.sparql  train.sparql  validation.sparql
resources/formulas_example/1hop/0qual/: test.sparql  train.sparql  validation.sparql
resources/formulas_example/1hop/1qual/: test.sparql  train.sparql  validation.sparql
resources/formulas_example/1hop/1qual-per-triple/: config.json
resources/formulas_example/2hop/0qual/: config.json  test.sparql  train.sparql  validation.sparql
resources/formulas_example/2hop/1qual/: first-test.sparql  first-train.sparql  first-validation.sparql  second-test.sparql  second-train.sparql  second-validation.sparql
resources/formulas_example/2hop/1qual-per-triple/: test.sparql  train.sparql  validation.sparql
resources/formulas_example/2i-1hop/0qual/: config.json  test.sparql  train.sparql  validation.sparql
resources/formulas_example/2i-1hop/1qual-per-triple/: test.sparql  train.sparql  validation.sparql
resources/formulas_example/2i/0qual/: test.sparql  train.sparql  validation.sparql
resources/formulas_example/2i/1qual-per-triple/: config.json  test.sparql  train.sparql  validation.sparql
resources/formulas_example/3hop/0qual/: test.sparql  train.sparql  validation.sparql
resources/formulas_example/3hop/1qual-per-triple/: config.json  test.sparql  train.sparql  validation.sparql
resources/formulas_example/3i/0qual/: config.json  test.sparql  train.sparql  validation.sparql
resources/formulas_example/3i/1qual-per-triple/: test.sparql  train.sparql  validation.sparql
src/gqs/: __init__.py  _sparql_execution.py  cli.py  conversion.py  dataset.py  dataset_split.py  dataset_store.py  export.py  import_.py  loader.py  mapping.py  query.proto  sample.py  sample_queries.py  split_to_triple_store.py  types.py
src/gqs/query_represenation/: __init__.py  query_pb2.pyi  torch.py
src/gqs/query_representation/: query.proto  query_pb2.py  torch.py
tests/: mock_dataset.py  test_conversion.py  test_dataloader.py  test_dataset_split.py  test_easy_hard_answer.py  test_mapping.py  test_query_validity_checker.py  test_reification.py
