##########################
# Setup.py Configuration #
##########################
[metadata]
name = gqs

[options]
install_requires =
    torch
    class_resolver>=0.0.10  # for resolving classes; >=0.0.10 for as_string for click options
    # torch_geometric
    click==8.1.2  # for CLI
    dill==0.3.3 # pickle_module
    protobuf==3.20.0
    requests==2.27.1
    rdflib==6.1.1

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
test =
    flake8
    mypy
    pytest
    types-requests
    unittest-templates

[options.entry_points]
console_scripts =
    gqs = gqs.cli:main

#########################
# Flake8 Configuration  #
# (.flake8)             #
#########################
[flake8]
ignore =
# line too long
    E501

import-order-style = pycharm

application-import-names =
    gqs

exclude =
    query_pb2.py

########################
# mypy Configuration   #
# (mypy.ini)           #
########################

[mypy]
exclude = gqs.generated.query_pb2

[mypy-gqs.generated.query_pb2]
ignore_missing_imports = True

[mypy-pandas]
ignore_missing_imports = True

[mypy-pandas.util.testing]
ignore_missing_imports = True

[mypy-class_resolver]
ignore_missing_imports = True

[mypy-rdflib.plugins.stores.sparqlstore]
ignore_missing_imports = True

[mypy-torch_geometric.data]
ignore_missing_imports = True

[mypy-torch_scatter]
ignore_missing_imports = True

[mypy-dill]
ignore_missing_imports = True

[mypy-tqdm.*]
ignore_missing_imports = True

[mypy-unittest_templates]
ignore_missing_imports = True

[mypy-gqs]
ignore_missing_imports = True



########################
# Pytest Configuration #
# (pytest.ini)         #
########################
[tool:pytest]
addopts = --strict-markers
markers =
    full_data: marks tests which require the full data (deselect with '-m "not full_data"')
